<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <com.yolo.yolo_android.ui.custom.TopNavBarView
            android:id="@+id/view_top_nav"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            app:title_text="@string/top_title_service_center"
            app:visible_back="true"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"/>

        <TextView
            android:id="@+id/tv_service_center_question"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:textSize="16dp"
            android:textColor="@color/font_black_131313"
            android:fontFamily="@font/notosanskr_bold_hestia"
            android:text="@string/service_center_question"
            android:layout_marginTop="53dp"
            android:layout_marginStart="@dimen/default_margin_24"
            android:layout_marginEnd="@dimen/default_margin_24"
            app:layout_constraintTop_toBottomOf="@+id/view_top_nav"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"/>

        <TextView
            android:id="@+id/tv_service_center_number"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:textSize="18dp"
            android:textColor="@color/main"
            android:fontFamily="@font/notosanskr_medium_hestia"
            android:text="@string/service_center_number"
            android:layout_marginTop="@dimen/default_margin_24"
            app:layout_constraintTop_toBottomOf="@+id/tv_service_center_question"
            app:layout_constraintStart_toStartOf="@+id/tv_service_center_question"
            app:layout_constraintEnd_toEndOf="@+id/tv_service_center_question"/>

        <TextView
            android:id="@+id/tv_service_center_time"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:textSize="13dp"
            android:textColor="@color/color_gray_707070"
            android:fontFamily="@font/notosanskr_regular_hestia"
            android:text="@string/service_center_time"
            android:layout_marginTop="10dp"
            app:layout_constraintTop_toBottomOf="@+id/tv_service_center_number"
            app:layout_constraintStart_toStartOf="@+id/tv_service_center_question"
            app:layout_constraintEnd_toEndOf="@+id/tv_service_center_question"/>

        <TextView
            android:id="@+id/tv_service_center_call"
            android:layout_width="0dp"
            android:layout_height="42dp"
            android:textSize="13dp"
            android:textColor="@color/font_black"
            android:fontFamily="@font/notosanskr_medium_hestia"
            android:textAlignment="center"
            android:gravity="center"
            android:text="@string/service_center_call"
            android:background="@drawable/bg_service_center_btn"
            android:foreground="?selectableItemBackground"
            android:layout_marginTop="@dimen/default_margin_24"
            app:layout_constraintTop_toBottomOf="@+id/tv_service_center_time"
            app:layout_constraintStart_toStartOf="@+id/tv_service_center_question"
            app:layout_constraintEnd_toEndOf="@+id/tv_service_center_question"/>

        <TextView
            android:id="@+id/tv_service_center_caution"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:textSize="12dp"
            android:textColor="@color/color_gray_bababa"
            android:fontFamily="@font/notosanskr_regular_hestia"
            android:text="@string/service_center_caution"
            android:layout_marginTop="52dp"
            app:layout_constraintTop_toBottomOf="@+id/tv_service_center_call"
            app:layout_constraintStart_toStartOf="@+id/tv_service_center_question"
            app:layout_constraintEnd_toEndOf="@+id/tv_service_center_question"/>

        <View
            android:id="@+id/view_line"
            android:layout_width="0dp"
            android:layout_height="1dp"
            android:background="@color/gray_line"
            android:layout_marginTop="@dimen/default_margin_24"
            app:layout_constraintTop_toBottomOf="@+id/tv_service_center_caution"
            app:layout_constraintStart_toStartOf="@+id/tv_service_center_question"
            app:layout_constraintEnd_toEndOf="@+id/tv_service_center_question"/>

        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_marginTop="@dimen/default_margin_24"
            app:layout_constraintTop_toBottomOf="@+id/view_line"
            app:layout_constraintStart_toStartOf="@+id/tv_service_center_question"
            app:layout_constraintEnd_toEndOf="@+id/tv_service_center_question">

            <TextView
                android:id="@+id/tv_service_center_kakao"
                android:layout_weight="1"
                android:layout_width="0dp"
                android:layout_height="42dp"
                android:textSize="13dp"
                android:textColor="@color/font_black"
                android:fontFamily="@font/notosanskr_medium_hestia"
                android:text="@string/service_center_kakao"
                android:textAlignment="center"
                android:gravity="center"
                android:background="@drawable/bg_service_center_btn"
                android:foreground="?selectableItemBackground" />

            <Space
                android:layout_width="16dp"
                android:layout_height="0dp"/>

            <TextView
                android:id="@+id/tv_service_center_email"
                android:layout_weight="1"
                android:layout_width="0dp"
                android:layout_height="42dp"
                android:textSize="13dp"
                android:textColor="@color/font_black"
                android:fontFamily="@font/notosanskr_medium_hestia"
                android:text="@string/service_center_email"
                android:textAlignment="center"
                android:gravity="center"
                android:background="@drawable/bg_service_center_btn"
                android:foreground="?selectableItemBackground"/>

        </LinearLayout>

    </androidx.constraintlayout.widget.ConstraintLayout>

</layout>