<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>
        <import type="android.view.View" />

        <variable
            name="vm"
            type="com.yolo.yolo_android.ui.signup.SignupViewModel" />
    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".ui.signup.SignupActivity"
        tools:ignore="SpUsage">

        <include
            android:id="@+id/layout_app_bar"
            layout="@layout/layout_app_bar"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            app:pageTitle="@{@string/page_title_nick_name}" />

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:paddingHorizontal="24dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintTop_toBottomOf="@id/layout_app_bar">

            <LinearLayout
                android:id="@+id/llSignup"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="52dp"
                    android:text="@string/signup_please_input_nick_name"
                    android:textColor="@color/black"
                    android:textSize="18dp"
                    android:textStyle="bold" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="44dp"
                    android:text="@string/signup_please_input_nick_name"
                    android:textColor="@color/gray"
                    android:textSize="13dp" />

                <EditText
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="8dp"
                    android:backgroundTint="@color/gray"
                    android:hint="@string/signup_hint"
                    android:importantForAutofill="no"
                    android:inputType="text"
                    android:singleLine="true"
                    android:text="@={vm.nickname}"
                    android:textColorHint="@color/gray" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="10dp"
                    android:text="@string/signup_guide"
                    android:textColor="@color/gray"
                    android:textSize="13dp" />

            </LinearLayout>

            <androidx.cardview.widget.CardView
                android:layout_width="match_parent"
                android:layout_height="48dp"
                android:layout_alignParentBottom="true"
                android:layout_marginBottom="24dp"
                app:cardBackgroundColor="@{vm.buttonActivation() ? @color/primary : @color/gray}"
                app:cardCornerRadius="5dp"
                app:cardElevation="0dp">

                <TextView
                    android:id="@+id/btn_complete"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:background="?attr/selectableItemBackground"
                    android:clickable="@{vm.buttonActivation() ? true : false}"
                    android:focusable="true"
                    android:gravity="center"
                    android:onClick="@{() -> vm.requestSignup(vm.nickname)}"
                    android:text="@string/common_complete"
                    android:textColor="@color/white"
                    android:textSize="16dp" />

            </androidx.cardview.widget.CardView>

        </RelativeLayout>

        <com.yolo.yolo_android.ui.custom.MySpinKitView
            style="@style/SpinKitView.ThreeBounce"
            android:layout_width="@dimen/loading_progressbar_size"
            android:layout_height="@dimen/loading_progressbar_size"
            android:visibility="@{vm.loading? View.VISIBLE : View.INVISIBLE, default = gone}"
            app:SpinKit_Color="@color/primary"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            tools:visibility="visible" />

    </androidx.constraintlayout.widget.ConstraintLayout>

</layout>